# ResearchForesight

./: .gitignore  README.md  pyproject.toml  requirements.txt
benchmark_release/: README.md  dropped_tasks.json  manifest.json  task_refined.jsonl
configs/: benchmark.yaml  benchmark_mimo_pro.yaml  benchmark_v2_tasks.yaml  domain_expansion_clusters.yaml  domain_harvest_queries.yaml  domain_registry.yaml  domain_seed_queries.yaml  llm_agent_taxonomy.yaml  llm_post_training_taxonomy.yaml  rag_taxonomy.yaml  taxoadapt_quarterly.yaml  taxoadapt_temporal.yaml  visual_generative_modeling_and_diffusion_taxonomy.yaml
docs/: HANDOFF_20260421_round_robin_from_canonical_exports.md  added87_future_audit_20260416.md  aris_researchagent_modular_enhancement_plan.md  aris_validation_replan.md  benchmark_rebuild_llm_future_20260416.md  benchmark_rebuild_log_20260416.md  benchmark_rebuild_log_20260425_cutoff_aware_kb.md  benchmark_rebuild_log_20260504_refined_rf_ids.md  benchmark_refine_log_20260423.md  benchmark_refine_log_20260423_round10.md  benchmark_refine_log_20260423_round12.md  benchmark_refine_log_20260423_round2.md  benchmark_refine_log_20260423_round3.md  benchmark_refine_log_20260423_round4.md  benchmark_refine_log_20260423_round5.md  benchmark_refine_log_20260423_round6.md  benchmark_refine_log_20260423_round7.md  benchmark_refine_log_20260423_round8.md  benchmark_refine_log_20260423_round9.md  benchmark_subset_cleanup_20260416.md  coi_aris_adaptation_notes.md  evidence_chain_expansion_build_20260416.md  evidence_chain_expansion_plan_20260416.md  experiment_log_20260416.md  (+17 more)
(+377 files in other folders)
